--- a/NFSMW_XenonEffects.vcxproj
+++ b/NFSMW_XenonEffects.vcxproj
@@ -66,7 +66,7 @@
       <AdditionalLibraryDirectories>$(DXSDK_DIR)Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>@CALL post-build\postbuild-debug.bat</Command>
+      <Command>copy /b /y "$(OutDir)$(TargetName)$(TargetExt)" E:\nfsmw\pc\$(TargetName)$(TargetExt)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -88,7 +88,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>@CALL post-build\postbuild.bat</Command>
+      <Command>copy /b /y "$(OutDir)$(TargetName)$(TargetExt)" E:\nfsmw\pc\$(TargetName)$(TargetExt)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
