corrected bounceparticle and added options to control it
also set the defaults to what they are in mw on 360

--- a/NFSMW_XenonEffects.ini
+++ b/NFSMW_XenonEffects.ini
@@ -5,6 +5,12 @@ TexturePack = GLOBAL\XenonEffects.tpk
 UseD3DDeviceTexture = 0
 ; Enables contrails
 Contrails = 1
+; Allows particles to bounce. Disabling this will make physics behave like in CG versions.
+; Disable in tandem with using UseCGStyle for a 6th-gen look.
+BounceParticles = 1
+; Makes particle bouncing use elasticity values and increase gravity. This increases their drag.
+; Requires BounceParticles to also be enabled
+CarbonBounceBehavior = 0
 ; Enables contrails in NIS
 NISContrails = 0
 ; Sparks and contrails will recieve shadows
@@ -26,14 +32,15 @@ ContrailTargetFPS = 30.0
 SparkTargetFPS = 60.0
 ; Controls the effect intensity values of contrails.
 ; If UseCGStyle is enabled, the intensity is not calculated and only uses MaxIntensity.
+; (MaxIntensity on GameCube and Xbox is 1.0)
 ContrailMinIntensity = 0.1
 ContrailMaxIntensity = 0.75
 ; Controls the intensity value of sparks & other emitters. Only works if the emitter has the "zContrail" property enabled.
 SparkIntensity = 1.0
 ; Controls the maximum number of generated particles.
-MaxParticles = 10000
+MaxParticles = 2048
 ; Controls the size of the NGEffectList. This may affect the visibility of particles on screen.
-NGEffectListSize = 500
+NGEffectListSize = 100
 
 ; Set the Elasticity values for each fuelcell_emitter here.
 ; Key names can either be strings or hex numbers
