add optional fade out

--- a/NFSMW_XenonEffects.ini
+++ b/NFSMW_XenonEffects.ini
@@ -23,6 +23,8 @@ ContrailSpeed = 44.0
 LimitContrailRate = 1
 ; Controls the state of the spark & other emitters rate limiter
 LimitSparkRate = 1
+; Makes particles fade out as they die like in modern particle systems
+FadeOutParticles = 0
 
 [Limits]
 ; Target framerate for the effects
