--- a/NFSMW_XenonEffects.ini
+++ b/NFSMW_XenonEffects.ini
@@ -6,11 +6,8 @@ UseD3DDeviceTexture = 0
 ; Enables contrails
 Contrails = 1
 ; Allows particles to bounce. Disabling this will make physics behave like in CG versions.
-; Disable in tandem with using UseCGStyle for a 6th-gen look.
+; Disable in tandem with using UseCGStyle and CGIntensityBehavior for a 6th-gen look.
 BounceParticles = 1
-; Makes particle bouncing use elasticity values and increase gravity. This increases their drag.
-; Requires BounceParticles to also be enabled
-CarbonBounceBehavior = 0
 ; Enables contrails in NIS
 NISContrails = 0
 ; Sparks and contrails will recieve shadows
@@ -30,6 +27,7 @@ FadeOutParticles = 0
 ; Target framerate for the effects
 ; Min = 0, Max = target game FPS (by default it's 60, this is the same value as SimRate in Widescreen Fix)
 ; Closer the value is to 0, the effects will have less density
+; Set to 0 to uncap the emission
 ContrailTargetFPS = 30.0
 SparkTargetFPS = 60.0
 ; Controls the effect intensity values of contrails.
@@ -43,9 +41,5 @@ SparkIntensity = 1.0
 MaxParticles = 2048
 ; Controls the size of the NGEffectList. This may affect the visibility of particles on screen.
 NGEffectListSize = 100
-
-; Set the Elasticity values for each fuelcell_emitter here.
-; Key names can either be strings or hex numbers
-[Elasticity]
-emsprk_line1 = 160.0
-emsprk_line2 = 120.0
+; Makes intensity be used to control particle density instead of opacity
+CGIntensityBehavior = 0
